# IsaacLabBisShe

./: .gitignore  Project.md  README.md  Todo.md  介绍的.md
ModelBackup/: README.md
ModelBackup/BiShePolicy/: BiSheClimbPitPolicy.pt  BiSheClimbPitPolicy2.pt  BiSheClimbPolicy.pt  BiShePolicy.pt  ClimbNew.pt  Climbdouble.pt  README.md  climbtest.pt
ModelBackup/ManualPolicy/: Manualpolicy.pt
ModelBackup/NaviationPolicy/: NaviationRoughNew.pt  NavigationBishe.pt  NavigationClimb.pt  NavigationWalk.pt  NewCode.pt
ModelBackup/PushPolicy/: PushBox.pt  PushNewNoHeightRestrain.pt  PushPolicy.pt  model_600.pt
Mujoco/: README.md
NewTools/: envtest_control_flags.py  envtest_model_use_player.py  envtest_navigation_bridge.py  envtest_status_panel.py  model_trans_climb.py  model_trans_flat.py  model_trans_rough.py  record_videos.py
Socket/: README.md  command_sender.py  envtest_socket_client.py  envtest_socket_server.py  model_use_keyboard_switch.py  model_use_ros_topic_switch.py  model_use_socket_switch.py
deploy/: README.md  README_push_box_sim2sim.md
deploy/robots/go2_nav/: CMakeLists.txt  README.md  main.cpp
deploy/robots/go2_nav/config/: config.yaml
deploy/robots/go2_nav/config/exported/: navigation_high_policy.onnx  walk_low_level_policy.onnx
deploy/robots/go2_nav/include/: State_NavigationRL.h
deploy/robots/go2_nav/src/: State_NavigationRL.cpp
deploy/robots/go2_nav/tools/: export_navigation_policies.py  publish_navigation_goal.py
scripts/: convert_hm3d_glb_to_usd.py  envtest_camera_view.py  export_IODescriptors.py  random_agent.py  zero_agent.py
scripts/rsl_rl/: README.md  (+4 more)
(+173 files in other folders)
